--- a/campfirenow/Properties/Resources.resx
+++ b/campfirenow/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="indicator2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\indicator2.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="notifybg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notifybg2.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
